--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "protobuf-json"]
 	path = protobuf-json
 	url = https://github.com/dpp-name/protobuf-json.git
+[submodule "protobuf"]
+	path = protobuf
+	url = https://github.com/google/protobuf
